--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     <title>Curso CSS</title>
 </head>
 <body>
+    <nav id="main-navbar">
+        <h1>Barra de navegação</h1>
+    </nav>
+    <div class="fixed">
+        <p>feito por café</p>
+    </div>
+    
     <div class="container">
         <h1>Olá Mundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A nobis iusto numquam cumque accusantium, sint qui quam, incidunt doloremque magnam sit maiores ut. Culpa quae deserunt delectus perspiciatis fuga est.
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In velit tempore molestiae aperiam ad accusantium temporibus similique ab at, ratione voluptatum animi laboriosam! Placeat distinctio inventore quia amet laudantium ratione dolorum vel atque ex eaque voluptatem modi, quibusdam aliquam quidem dolor similique suscipit accusamus quod. Porro repellendus molestiae necessitatibus itaque similique quia sunt repellat nostrum! Illum assumenda aliquid eos est quibusdam iste et necessitatibus natus! Quasi ipsam explicabo aliquam, voluptatum dolore optio magnam sequi eligendi voluptatem atque laudantium perferendis, nobis eveniet cumque vel hic placeat soluta. Dolore laboriosam harum culpa ratione. Ut quia quis quo illum exercitationem numquam eaque animi et? Odit mollitia nostrum ipsa molestias repellat iusto numquam explicabo, blanditiis placeat ad quibusdam tenetur, fuga aliquid, totam molestiae a excepturi adipisci repudiandae ipsam quisquam. Alias ea accusamus et magnam odio suscipit, quo obcaecati quia quis qui, veniam ad laborum nulla optio consectetur eos. Nobis nemo optio saepe laboriosam porro ratione illo velit dolores, expedita doloribus amet iusto. Saepe, ab pariatur vel porro, eos nisi aliquid voluptatem repellendus ex veritatis illum ipsum dolorum accusamus, at eligendi commodi iste odit dignissimos quas quidem. Magnam odio assumenda dolorum autem enim facere cumque impedit, vel accusantium iure, sed eaque veritatis esse sequi fuga minus perferendis quam similique? Consequatur aperiam a tempora in, laborum molestiae voluptatem incidunt beatae, quae magni esse soluta ea vel ipsum quo eligendi blanditiis? Quia ullam veritatis blanditiis aspernatur facilis quas numquam, corporis, dicta odio assumenda labore? Sed eligendi iure dolorem architecto delectus? Ipsam illo dolor veniam aut ullam commodi corporis perferendis voluptas earum qui nemo temporibus error, deserunt eos, eligendi inventore praesentium similique totam molestiae aliquam, soluta consequatur eius ut? Eveniet itaque quas, ex provident non saepe commodi explicabo qui consequatur similique placeat unde aut, laboriosam consectetur nobis, eum neque expedita eius! Maxime accusamus sit odio tempora ipsum culpa perferendis quas mollitia dolore, aperiam ea impedit voluptatum libero officiis nostrum officia magnam veniam dolorum modi! Maxime, facere sunt. Illo rem harum ut eum tempore ipsam esse facere eligendi hic facilis perspiciatis, cupiditate ducimus suscipit aperiam laboriosam ipsa vitae deleniti possimus quia velit! Ad dolorum laudantium culpa quasi a saepe ducimus provident neque deserunt in, natus vitae repudiandae velit ex magni. Labore vero saepe doloribus provident ut excepturi voluptas necessitatibus exercitationem dolores vel, fuga harum error dolorum possimus suscipit, asperiores tenetur expedita vitae. Soluta odio animi quasi quo repudiandae, unde sequi assumenda est possimus vel sit delectus repellat ex eum similique ratione natus, voluptates reiciendis ad debitis earum officia. Recusandae, quibusdam eum voluptatum doloremque tempora consequatur quia accusantium sequi ad adipisci! Autem eligendi culpa adipisci neque repudiandae! Consectetur officia cum modi a commodi id fugit nesciunt nihil, ipsum vitae veniam mollitia debitis repellendus hic nostrum ipsa sint veritatis molestias at nemo perspiciatis? Ad nihil consequatur, vero sunt dolorem facere praesentium! Totam, dolore molestiae, saepe adipisci aliquam cupiditate et maxime aspernatur, corrupti iure libero soluta nostrum ex perspiciatis quas commodi excepturi. Vero atque voluptates natus qui ea. Vel, corrupti laborum veniam reprehenderit consequatur sapiente, perspiciatis excepturi praesentium et molestiae dignissimos molestias.
         </p>
     </div>
+    <div class="container-2">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, corrupti aliquam quaerat voluptatibus repellat error consectetur tempore quod sint tempora incidunt, pariatur reiciendis libero magni hic velit. Recusandae et ipsum ad. A error ducimus excepturi dolor, iste, sed tenetur incidunt ullam, cumque suscipit repellat atque dicta placeat expedita deserunt? Accusamus consequuntur ex nihil iusto atque quis neque inventore voluptas aliquid at? Aliquid possimus deleniti fugiat quidem! Consequatur saepe excepturi iure aspernatur itaque aut aliquam id vero. Sit placeat, natus pariatur voluptates similique doloribus reprehenderit quae necessitatibus rem quisquam dolor tempora tempore perferendis maiores asperiores libero quidem numquam magni. Eaque sapiente reiciendis voluptates velit ipsum, iusto ullam culpa cumque hic quae obcaecati distinctio, totam quod earum iste laboriosam voluptatibus accusamus. Vero neque voluptatibus soluta, voluptatum ab a impedit, similique expedita, quis rem cum necessitatibus nihil porro tempora repudiandae. Architecto perferendis voluptatum esse, impedit porro aperiam totam optio a aut fuga itaque! Voluptatum molestiae veritatis eos, fuga doloremque, accusamus facilis, nisi libero laboriosam eveniet officia. Mollitia vitae expedita aperiam fuga minus ut porro. Quasi suscipit iure eos veniam deleniti quam, itaque nostrum doloribus eum? Accusamus vero praesentium modi deleniti repellendus quas nihil commodi architecto! Rerum sed inventore aliquid optio id libero incidunt voluptatum laborum quod iste corporis, a nulla blanditiis vero laudantium quo vitae, facilis repudiandae quaerat expedita. Consequatur unde, voluptates natus optio minus maxime laboriosam vitae, est voluptatum harum ipsam voluptas. Voluptatibus, corrupti! Id quis quod sint dolores, eum earum temporibus facere repudiandae perspiciatis commodi suscipit quae. Quam perferendis quas incidunt veritatis nemo odio laborum enim sapiente, eveniet impedit dolores veniam. Ipsam reiciendis quis quidem itaque consequuntur, illo expedita harum modi? Quod laboriosam rem debitis, possimus hic nisi qui modi eos pariatur eaque. Aspernatur veritatis sit inventore reiciendis eligendi maxime similique amet asperiores dolore qui accusamus est pariatur unde quasi fugit neque ipsa, maiores, consectetur repudiandae minima dicta excepturi ad quaerat! Commodi quisquam reiciendis recusandae doloremque tempora, veniam ipsa at repellat nobis sunt ab molestiae saepe itaque voluptates sequi voluptate animi error libero, dolore adipisci soluta labore quia officiis. Quos ipsum, omnis inventore at nesciunt iusto molestiae dolor. Non natus ipsum voluptas tempore aspernatur corrupti eius iste obcaecati tempora commodi fugit quam, ratione mollitia recusandae expedita ducimus odio dignissimos exercitationem iusto maxime dicta minus! Aliquid fuga distinctio eos ex odio natus ea provident qui! Natus iste in exercitationem inventore vero ex quas consectetur, esse voluptatum aliquam! Dicta id quisquam animi harum obcaecati ex unde corporis dolores magnam quod voluptatem voluptates quos perferendis nam tempora, consequatur dolorem asperiores aspernatur, culpa, ipsam numquam error quaerat nesciunt aperiam. Ducimus assumenda fuga repellat ab similique facilis. Dolore modi reprehenderit nihil repellat? Dolores, obcaecati alias fugit quo laboriosam architecto praesentium, nulla doloremque totam reiciendis suscipit, mollitia excepturi a quidem voluptas vero! Eum quam fugit amet repellat ratione vitae error, suscipit aspernatur minus, nisi nihil sint a, placeat et ex rerum quisquam maiores. Deleniti, eaque natus sunt sit repellendus, doloremque, molestiae iure molestias possimus dolorum voluptatibus. Alias amet quasi error soluta deserunt voluptatibus a earum, id culpa nostrum magni aliquam architecto beatae eligendi voluptatem atque? Cupiditate, natus numquam. Ratione amet perspiciatis aliquam consequatur possimus? Neque possimus pariatur soluta veniam quia aut consequatur maxime quod dolore, non quam itaque, distinctio iure accusamus quisquam officiis, ex ab unde. Consequuntur esse ipsum dolorum id repellendus facere, quos animi eveniet natus blanditiis quod. Soluta eveniet quas, laboriosam rerum eius perspiciatis voluptatum sequi consequatur numquam, ipsum repellendus eligendi saepe vitae, doloremque dolor quos! Voluptatibus numquam obcaecati mollitia minima totam! Maxime soluta voluptatum, eaque sed enim, placeat fugiat consectetur consequatur repellat quod a rem. Maiores mollitia, praesentium repellat autem suscipit id facilis rem dolorum dolorem deserunt asperiores, ea earum placeat iusto aliquam nulla facere odio vel itaque magnam nostrum error veritatis? Nesciunt ab facere ratione optio voluptas, eaque distinctio ipsam corrupti tenetur. Quibusdam veritatis provident expedita harum pariatur eveniet consequuntur, porro aliquam perspiciatis libero quia nihil nobis quod, nostrum dolorem quisquam? Fuga, voluptate enim magnam aliquam dicta sint nobis amet vero beatae esse quo nulla natus vel corrupti, aspernatur quidem quam doloremque qui perferendis? Dolorem tenetur autem nemo ad odit ratione fuga ullam odio voluptas eaque et vitae quam exercitationem quas asperiores consequuntur rem, quos quae corporis iure obcaecati officia voluptatibus perspiciatis? Repudiandae fugiat magni quas! Sed explicabo quos asperiores blanditiis vitae molestiae ut, soluta laboriosam nobis incidunt dolores fuga libero optio reiciendis. Necessitatibus unde harum, dolor nihil ab error quo, tempora quos, eligendi neque iusto dolore vitae eius quia. Eaque fugit harum explicabo magni excepturi doloremque cumque placeat id, molestiae in ipsa nobis incidunt quibusdam natus iure officiis mollitia nisi quae, porro laboriosam provident voluptate doloribus non at. Illum, consectetur officia aliquid porro magni vitae ex, quae ab harum reiciendis, inventore possimus quasi. Facere quaerat, fugiat vero praesentium reprehenderit sequi dolorem fugit deleniti corporis ex, rerum illum eligendi voluptate id animi quibusdam?
+        </p>
+    </div>
+  
 
     <aside class="main-aside">
         <h2>Redes Sociais</h2>
@@ -21,25 +33,43 @@
             <li><a href="https://instagram.com">Instagram</a></li>
         </ul>
     </aside>
+    <div class="box">
+        <form action="form.php" method="POST" class="main-form">
+            <div class="form-group">
+                <label>Primeiro Nome:</label>
+                <input type="text" placeholder="Entre seu primeiro nome" />
+            </div>
+            <div class="form-group">
+                <label>Segundo Nome:</label>
+                <input type="text" />
+            </div>
+            <div class="form-group">
+                <label>Email:</label>
+                <input type="text" />
+            </div>
+            <div class="form-group">
+                <label>Mensagem</label>
+                <textarea name="mensagem"></textarea>
+            </div>
+            <input class="button" type="submit" />
+        </form>
+    </div>
+    <div class="box relative">
+        <div class="absolute">
+            <h1>olá mundo :)</h1>
+        </div>
+    </div>
+    <buttom class="fixed-button"></buttom>
 
-    <form action="form.php" method="POST" class="main-form">
-        <div class="form-group">
-            <label>Primeiro Nome:</label>
-            <input type="text" placeholder="Entre seu primeiro nome" />
-        </div>
-        <div class="form-group">
-            <label>Segundo Nome:</label>
-            <input type="text" />
-        </div>
-        <div class="form-group">
-            <label>Email:</label>
-            <input type="text" />
-        </div>
-        <div class="form-group">
-            <label>Mensagem</label>
-            <textarea name="mensagem"></textarea>
-        </div>
-        <input class="button" type="submit" />
-    </form>
+    <div class="box categories">
+        <h2>Categorias</h2>
+        <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus inventore id voluptatem iste error animi? Porro aspernatur praesentium omnis, vero a dolorum delectus nostrum commodi qui magni natus blanditiis eveniet!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus inventore id voluptatem iste error animi? Porro aspernatur praesentium omnis, vero a dolorum delectus nostrum commodi qui magni natus blanditiis eveniet!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus inventore id voluptatem iste error animi? Porro aspernatur praesentium omnis, vero a dolorum delectus nostrum commodi qui magni natus blanditiis eveniet!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus inventore id voluptatem iste error animi? Porro aspernatur praesentium omnis, vero a dolorum delectus nostrum commodi qui magni natus blanditiis eveniet!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus inventore id voluptatem iste error animi? Porro aspernatur praesentium omnis, vero a dolorum delectus nostrum commodi qui magni natus blanditiis eveniet!</li>
+        </ul>
+    </div>
 </body>
 </html>
